--- a/src/App.css
+++ b/src/App.css
@@ -38,6 +38,8 @@
 #break-length {
   border: 1px solid black;
   font-size: 40px;
+  min-width: 50px;
+  text-align: center;
   grid-area: break-length;
 }
 
@@ -66,6 +68,8 @@
 #session-length {
   border: 1px solid black;
   font-size: 40px;
+  min-width: 50px;
+  text-align: center;
   grid-area: session-length;
 }
 
